--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.7.9",
+        "ejs": "^3.1.10",
         "express": "^4.21.2",
         "mysql2": "^3.12.0",
+        "path": "^0.12.7",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1"
     }
